fix: checkbox and radiobutton alignment

--- a/packages/core/src/checkbox/Checkbox.css
+++ b/packages/core/src/checkbox/Checkbox.css
@@ -6,6 +6,10 @@
   cursor: var(--salt-selectable-cursor-hover);
 }
 
+.saltCheckbox-label {
+  margin-top: -1px
+}
+
 /* Styles applied to root component if `disabled={true}` */
 .saltCheckbox-disabled {
   color: var(--salt-text-primary-foreground-disabled);
